# rust-phonenumber

./: Cargo.toml  update_assets.js
src/: error.rs  formatter.rs  lib.rs  phone_number.rs  validator.rs
src/metadata/: loader.rs
src/parser/: helper.rs
