[package]
name = "phonenumber"
version = "0.3.1+8.12.9"
edition = "2021"

authors = ["meh. <meh@1aim.com>"]
license = "Apache-2.0"

description = "Library for parsing, formatting and validating international phone numbers."
repository = "https://github.com/1aim/rust-phonenumber"
keywords = ["phonenumber", "phone", "number", "parser", "formatter"]
readme = "README.md"

[dependencies]
regex = "1.7.1"
regex-cache = "0.2"
lazy_static = "1.4.0"
fnv = "1.0"
thiserror = "1.0.38"
quick-xml = "0.27.1"
itertools = "0.10.5"
either = "1.8.1"
nom = "7.1.3"

serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.3"

[build-dependencies]
quick-xml = "0.27.1"
thiserror = "1.0.38"
regex = "1.7.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.3"

[dev-dependencies]
doc-comment = "0.3"
